--- a/common/.gitlab/ci/test/ansible/playbook.windows.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/ansible/playbook.windows.gitlab-ci.yml
@@ -2,6 +2,7 @@
 molecule-windows:
   stage: test
   image: megabytelabs/molecule:latest
+  allow_failure: true
   services:
     - docker:dind
   rules:
