--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "cz-conventional-changelog": "^3.3.0",
     "handlebars-helpers": "^0.10.0"
   },
+  "optionalDependencies": {
+    "chalk": "^4.1.2",
+    "inquirer": "^8.2.0",
+    "signale": "^1.4.0"
+  },
   "keywords": [
     "common",
     "configurations",
