--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -229,6 +229,13 @@ tasks:
         vars:
           FORMULAE: glab
 
+  go:
+    run: once
+    cmds:
+      - task: brew:formulae
+        vars:
+          FORMULAE: go
+
   jq:
     run: once
     cmds:
