--- a/common/.config/taskfiles/npm/Taskfile.yml
+++ b/common/.config/taskfiles/npm/Taskfile.yml
@@ -228,6 +228,14 @@ tasks:
     cmds:
       - '{{.NPX_HANDLE}}jest'
 
+  test:ci:
+    deps:
+      - :install:modules:local
+      - :install:npm:jest
+    cmds:
+      # TODO: https://gist.github.com/rishitells/3c4536131819cff4eba2c8ab5bbb4570
+      - '{{.NPX_HANDLE}}jest --collectCoverage --ci --reporters=default --reporters=jest-junit'
+
   test:coverage:
     deps:
       - :install:modules:local
