--- a/.config/taskfiles/Taskfile-git.yml
+++ b/.config/taskfiles/Taskfile-git.yml
@@ -140,7 +140,7 @@ tasks:
       - github:create
     cmds:
       - |
-        if [ ! -z "$GITHUB_TOKEN" ] && [ ! -z "$ANSIBLE_GALAXY_TOKEN" ]; then
+        if [ ! -z "$GITHUB_TOKEN" ] && [ ! -z "$ANSIBLE_GALAXY_TOKEN" ] && [ '{{.REPOSITORY_TYPE}}' == 'ansible' ]; then
           gh secret set ANSIBLE_GALAXY_TOKEN -b "$ANSIBLE_GALAXY_TOKEN"
         fi
     status:
