--- a/common/.config/taskfiles/Taskfile-python.yml
+++ b/common/.config/taskfiles/Taskfile-python.yml
@@ -56,12 +56,14 @@ tasks:
   test:ci:
     deps:
       - :install:python:pytest
+      - :install:python:pytest-cov
       - :install:software:poetry
     cmds:
-      # TODO: https://docs.gitlab.com/ee/user/project/merge_requests/test_coverage_visualization.html#python-example
       - poetry config virtualenvs.create false
       - poetry install --no-dev
-      - poetry run pytest --junitxml=report.xml
+      - poetry run pytest --junitxml=report.xml --cov=src/
+      - poetry run coverage report
+      - poetry run coverage xml
 
   test:pytest:
     deps:
