--- a/common/.config/taskfiles/install/Taskfile-python.yml
+++ b/common/.config/taskfiles/install/Taskfile-python.yml
@@ -18,6 +18,13 @@ tasks:
         vars:
           PACKAGE: pytest
 
+  pytest-cov:
+    run: once
+    cmds:
+      - task: pip
+        vars:
+          PACKAGE: pytest-cov
+
   requirements:
     deps:
       - :install:software:python
