--- a/common/.gitlab/ci/test/jest.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/jest.gitlab-ci.yml
@@ -1,5 +1,5 @@
 ---
-npm-test:
+jest:
   stage: test
   image: megabytelabs/jest:slim
   needs: []
@@ -14,7 +14,23 @@ npm-test:
   script:
     - task npm:test:ci
   artifacts:
+    paths:
+      - coverage/
     when: always
     reports:
       junit: junit.xml
       cobertura: coverage/cobertura-coverage.xml
+
+pages:
+  stage: deploy
+  dependencies:
+    - jest
+  script:
+    - mkdir .public
+    - cp -r coverage/* .public
+    - mv .public public
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
