--- a/.config/taskfiles/Taskfile-git.yml
+++ b/.config/taskfiles/Taskfile-git.yml
@@ -119,7 +119,7 @@ tasks:
           fi
           MINIMIZED_TOPICS="$(jq -n --argjson tags "$RESULT" '$tags | .[]' | xargs | sed 's/ /","/g' | sed 's/^/"/' | sed 's/$/"/')"
           if [[ "$MINIMIZED_TOPICS" != '""' ]]; then
-            curl -X PUT -H "Accept: application/vnd.github.mercy-preview+json" -u "{{.GITHUB_ORG}}:$GITHUB_TOKEN" \
+            curl -s -X PUT -H "Accept: application/vnd.github.mercy-preview+json" -u "{{.GITHUB_ORG}}:$GITHUB_TOKEN" \
               'https://api.github.com/repos/{{.GITHUB_ORG}}/{{.GITHUB_SLUG}}/topics' -d '{"names":['"$MINIMIZED_TOPICS"']}' > /dev/null
           fi
         else
@@ -140,7 +140,7 @@ tasks:
       - github:create
     cmds:
       - |
-        if [ ! -z "$GITHUB_TOKEN" ] && [ ! -z "$ANSIBLE_GALAXY_TOKEN" ] && [ '{{.REPOSITORY_TYPE}}' == 'ansible' ]; then
+        if [ ! -z "$GITHUB_TOKEN" ] && [ ! -z "$ANSIBLE_GALAXY_TOKEN" ]; then
           gh secret set ANSIBLE_GALAXY_TOKEN -b "$ANSIBLE_GALAXY_TOKEN"
         fi
     status:
@@ -184,6 +184,23 @@ tasks:
       - sh: '[ "{{.NAME}}" != "null" ]'
         msg: The `.blueprint.name` variable in `package.json` must be set.
 
+  gitlab:integrations:
+    deps:
+      - gitlab:integrations:github
+
+  gitlab:integrations:github:
+    deps:
+      - :install:software:glab
+      - :install:software:jq
+    env:
+      GITHUB_REPO:
+        sh: jq -r '.blueprint.repository.github' package.json
+    cmds:
+      - |
+        if [ ! -z "$GITLAB_TOKEN" ] && [ ! -z "$GITHUB_TOKEN" ]; then
+          glab api projects/:fullpath/integrations/github -X PUT -f token="$GITHUB_TOKEN" -f repository_url="$GITHUB_REPO"
+        fi
+
   gitlab:mirror:
     deps:
       - :install:software:glab
@@ -205,9 +222,9 @@ tasks:
               -f "url=https://{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/{{.GITHUB_ORG}}/{{.GITHUB_SLUG}}.git" \
               -f 'enabled=true'
           fi
-          curl -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -X PUT --data \
+          curl -s -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -X PUT --data \
             "{\"mirror\": true, \"import_url\": \"https://{{.GITHUB_USER}}:$GITHUB_TOKEN@github.com/{{.GITHUB_ORG}}/{{.GITHUB_SLUG}}.git\"}" \
-            'https://gitlab.com/api/v4/projects/{{.GITLAB_REPO_ID}}'
+            'https://gitlab.com/api/v4/projects/{{.GITLAB_REPO_ID}}' > /dev/null
         fi
     sources:
       - package.json
@@ -270,6 +287,7 @@ tasks:
   gitlab:update:
     deps:
       - gitlab:mirror
+      - gitlab:integrations
       - gitlab:pipelines
       - gitlab:update:meta
       - gitlab:wiki
@@ -282,18 +300,33 @@ tasks:
     vars:
       DESCRIPTION:
         sh: jq -r '.description' package.json
+      ISSUES_TEMPLATE: ## Summary\r\n\r\n(Summarize the bug encountered concisely)\r\n\r\n##
+        Steps to reproduce\r\n\r\n(How one can reproduce the issue - this is very important)\r\n\r\n##
+        Example Project\r\n\r\n(If possible, please create an example project here on GitLab.com that
+        exhibits the problematic\r\nbehavior, and link to it here in the bug report.\r\nIf you are using
+        an older version of GitLab, this will also determine whether the bug has been fixed\r\nin a more
+        recent version)\r\n\r\n## What is the current bug behavior?\r\n\r\n(What actually happens)\r\n\r\n##
+        What is the expected correct behavior?\r\n\r\n(What you should see instead)\r\n\r\n## Relevant
+        logs and/or screenshots\r\n\r\n(Paste any relevant logs - please use code blocks (```) to format
+        console output, logs, and code, as\r\nit's very hard to read otherwise.)\r\n\r\n## Possible
+        fixes\r\n\r\n(If you can, link to the line of code that might be responsible for the problem)
       NAME:
         sh: jq -r '.blueprint.name' package.json
       PROJECT_TYPE:
         sh: if [[ $(jq -r '.private' package.json) == 'true' ]]; then echo 'private'; else echo 'public'; fi
+      TEST_COVERAGE_REGEX:
+        sh: jq -r '.build_coverage_regex' .variables.json | sed 's/^null$//'
     env:
       KEYWORDS:
         sh: jq -r '.keywords | tostring' package.json | sed 's/\[//' | sed 's/\]//' | sed 's/"//g'
     cmds:
       - |
         if [ ! -z "$GITLAB_TOKEN" ]; then
-          glab api projects/:fullpath -X PUT -f description="{{.DESCRIPTION}}" -f name="{{.NAME}}" \
-            -f wiki_enabled={{.GITLAB_WIKI}} -f visibility="{{.PROJECT_TYPE}}" -f tag_list="$KEYWORDS" --silent
+          curl -s -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -X PUT --data \
+          '{"description": "{{.DESCRIPTION}}", "issues_template": "{{.ISSUES_TEMPLATE}}", "name": "{{.NAME}}"}' \
+          https://gitlab.com/api/v4/projects/31472271
+          glab api projects/:fullpath -X PUT -f build_coverage_regex="{{.TEST_COVERAGE_REGEX}}" -f wiki_enabled={{.GITLAB_WIKI}} \
+          -f visibility="{{.PROJECT_TYPE}}" -f topics="$KEYWORDS" --silent
         else
           true warn 'The `GITLAB_TOKEN` environment variable is not set so the GitLab repository cannot be updated via the API.'
         fi
