--- a/.config/taskfiles/ansible/Taskfile-test.yml
+++ b/.config/taskfiles/ansible/Taskfile-test.yml
@@ -3,11 +3,7 @@ version: '3'
 
 tasks:
   local:
-    deps:
-      - :ansible:symlink:{{.REPOSITORY_SUBTYPE}}
-      - :install:python:requirements
-    label: test:local
-    desc: Run the Ansible play on the local machine
+    desc: Run the Ansible play on the local machine (or via WSL - see task summary)
     summary: |
       # Run the Ansible play on the local machine
 
@@ -16,21 +12,20 @@ tasks:
       `test/<OS>/ansible.cfg` to run the play. At the beginning of the play, you will
       be prompted for the sudo password.
     cmds:
-      - true info "Running the Ansible play locally"
-      - cp test/inventory inventory
-      - if [ ! -f main.yml.bak ]; then cp main.yml main.yml.bak; fi
-      - cp test/test.yml main.yml
+      - task: local:test
+
+  local:test:
+    deps:
+      - :ansible:symlink:{{.REPOSITORY_SUBTYPE}}
+      - :install:python:requirements
+    cmds:
+      - true info "Testing Ansible playbook locally"
+      - cp test/{{OS}}/inventory inventory
       - if [ ! -f ansible.cfg.bak ]; then cp ansible.cfg ansible.cfg.bak; fi
-      - cp test/ansible.cfg ansible.cfg
-      - ansible-playbook --ask-sudo-pass main.yml
-      - mv main.yml.bak main.yml
+      - cp test/{{OS}}/ansible.cfg ansible.cfg
+      - ansible-playbook --ask-sudo-pass test/{{OS}}/test.yml
       - mv ansible.cfg.bak ansible.cfg
-    # log:
-    #   error: Finished local testing of the Ansible play with error(s)
-    #   success: Local testing of the Ansible play was successful!
-    preconditions:
-      - sh: typeof ansible &> /dev/null
-        msg: Ansible is not available.
+      - rm inventory
 
   molecule:docker:
     deps:
@@ -52,11 +47,13 @@ tasks:
 
       **Save test results for use with auto-generating compatibility chart:**
       `task ansible:test:molecule:docker:matrix`
-    vars:
-      SNAP_REFS:
-        sh: grep -Ril 'community.general.snap:' ./tasks || true
     cmds:
-      - molecule test -s docker{{if .SNAP_REFS}}-snap{{end}}
+      - |
+        SCENARIO="docker"
+        if grep -Ril 'community.general.snap:' ./tasks; then
+          SCENARIO="docker-snap"
+        fi
+        molecule test -s "$SCENARIO"
 
   molecule:docker:matrix:
     deps:
@@ -66,11 +63,14 @@ tasks:
     vars:
       MOLECULE_DATE:
         sh: date '+%Y-%m-%d'
-      SNAP_REFS:
-        sh: grep -Ril 'community.general.snap:' ./tasks || true
     cmds:
       - mkdir -p molecule/.results
-      - PY_COLORS=0 molecule test -s "docker{{if .SNAP_REFS}}-snap{{end}}" > "molecule/.results/{{.MOLECULE_DATE}}-$SCENARIO.txt"
+      - |
+        SCENARIO="docker"
+        if grep -Ril 'community.general.snap:' ./tasks; then
+          SCENARIO="docker-snap"
+        fi
+        PY_COLORS=0 molecule test -s "$SCENARIO" 2>&1 | tee "molecule/.results/{{.MOLECULE_DATE}}-$SCENARIO.txt"
 
   molecule:virtualbox:
     deps:
@@ -131,11 +131,31 @@ tasks:
       # yamllint disable-line rule:truthy
       OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
     cmds:
-      - task: test:molecule:virtualbox:converge:{{if .CLI_ARGS}}cli{{else}}prompt{{end}}
+      - task: molecule:virtualbox:converge:{{if .CLI_ARGS}}cli{{else}}prompt{{end}}
 
-  molecule:virtualbox:converge:cli: molecule converge -s {{.CLI_ARGS}}-desktop
+  molecule:virtualbox:converge:cli:
+    cmds:
+      - |
+        SCENARIO='{{.CLI_ARGS}}-desktop'
+        if test -d "molecule/$SCENARIO"; then
+          molecule converge -s "$SCENARIO"
+        else
+          true error "The `$SCENARIO` scenario is not present in the `molecule/` folder"
+        fi
 
-  molecule:virtualbox:converge:prompt: node .common/scripts/prompts/molecule-desktop.js
+  molecule:virtualbox:converge:prompt:
+    interactive: true
+    deps:
+      - :install:modules:prompt
+    cmds:
+      - |
+        CHOICE="$(node .config/scripts/prompts/molecule-desktop.js)"
+        SCENARIO="$CHOICE-desktop"
+        if test -d "molecule/$SCENARIO"; then
+          molecule converge -s "$SCENARIO"
+        else
+          true error "The `$SCENARIO` scenario is not present in the `molecule/` folder"
+        fi
 
   molecule:virtualbox:matrix:
     deps:
@@ -148,7 +168,7 @@ tasks:
         sh: date '+%Y-%m-%d'
     cmds:
       - mkdir -p molecule/.results
-      - PY_COLORS=0 molecule test > molecule/.results/{{.MOLECULE_DATE}}-default.txt
+      - PY_COLORS=0 molecule test | tee 'molecule/.results/{{.MOLECULE_DATE}}-default.txt'
 
   vagrant:
     deps:
@@ -189,12 +209,17 @@ tasks:
       **Example bypassing interactive prompt:**
       `task test:vagrant -- --provider=vmware_workstation windows`
     cmds:
-      - task: vagrant-prompt-{{if .CLI_ARGS}}cli{{else}}prompt{{end}}
+      - task: vagrant:{{if .CLI_ARGS}}cli{{else}}prompt{{end}}
 
   vagrant:cli:
     cmds:
       - vagrant up {{.CLI_ARGS}}
 
   vagrant:prompt:
+    deps:
+      - :install:modules:prompt
+    interactive: true
     cmds:
-      - node .common/scripts/prompts/vagrant-up.js
+      - |
+        CHOICE="$(node .config/scripts/prompts/vagrant-up.js)"
+        vagrant up "$CHOICE"
