--- a/.config/taskfiles/common/Taskfile-update.yml
+++ b/.config/taskfiles/common/Taskfile-update.yml
@@ -28,19 +28,16 @@ tasks:
     vars:
       CONTRIB_TEMPLATE: .config/docs/blueprint-contributing.md
     cmds:
+      - mkdir -p docs
       - >
         {{.NPX_HANDLE}}readme generate --silent --headingPrefix '{}' --config .variables.json
-        --input "{{.CONTRIB_TEMPLATE}}" --output CONTRIBUTING.md
+        --input "{{.CONTRIB_TEMPLATE}}" --output docs/CONTRIBUTING.md
       - task: markdown:scrub
         vars:
-          SCRUB_FILE: CONTRIBUTING.md
-      - '{{.NPX_HANDLE}}prettier --write CONTRIBUTING.md'
-    # log:
-    #   error: Failed to generate CONTRIBUTING.md
-    #   start: Generating CONTRIBUTING.md
-    #   success: Generated CONTRIBUTING.md
+          SCRUB_FILE: docs/CONTRIBUTING.md
+      - '{{.NPX_HANDLE}}prettier --write docs/CONTRIBUTING.md'
     sources:
-      - CONTRIBUTING.md
+      - docs/CONTRIBUTING.md
       - .config/docs/**/*
       - .variables.json
     preconditions:
@@ -94,8 +91,6 @@ tasks:
           {{.NPX_HANDLE}}remark --use man MAN.md --output dist/man
           rm MAN.md
         fi
-    # log:
-    #   error: Failed to generate MAN.md
     sources:
       - .config/docs/**/*
       - .variables.json
@@ -168,10 +163,6 @@ tasks:
           SCRUB_FILE: README.md
       - task: ':{{if eq .REPOSITORY_TYPE "packer"}}packer:update:readme{{else}}donothing{{end}}'
       - '{{.NPX_HANDLE}}prettier --write README.md'
-    # log:
-    #   error: Failed to generate README.md
-    #   start: Generating README.md
-    #   success: Generated README.md
     sources:
       - .autodoc/*
       - .config/docs/**/*
@@ -255,7 +246,10 @@ tasks:
     deps:
       - :install:software:jq
     cmds:
-      - task: :upstream:project:template:variables
+      - task: :upstream:variables
+        vars:
+          INPUT_FILE: .config/variables.json
+          OUTPUT_FILE: .variables.json
       - task: ':{{if eq .REPOSITORY_TYPE "packer"}}packer:update:variables{{else}}donothing{{end}}'
       - task: ':{{if eq .REPOSITORY_SUBTYPE "role"}}ansible:update:variables{{else}}donothing{{end}}'
     sources:
