--- a/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/.config/taskfiles/upstream/Taskfile-common.yml
@@ -26,7 +26,10 @@ tasks:
       - mkdir -p ./{{.SHARED_FOLDER}}/common/.config
       - rm -rf ./{{.SHARED_FOLDER}}/.config/docs
       - git clone --depth=1 {{.DOCS_URL}} ./{{.SHARED_FOLDER}}/common/.config/docs
-      - rm -rf ./{{.SHARED_FOLDER}}/common/.config/docs/.git
+      - |
+        cd rm -rf ./{{.SHARED_FOLDER}}/common/.config/docs
+        rm -rf .git .config .github .gitlab .vscode .editorconfig .gitignore .gitlab-ci.yml
+        rm -rf LICENSE Taskfile.yml package-lock.json package.json poetry.lock pyproject.toml
 
   copy:
     deps:
@@ -126,15 +129,12 @@ tasks:
         wait
 
   merge:variables:
-    deps:
-      - merge:variables:project
+    cmds:
+      - task: merge:variables:project
+      - task: merge:variables:subtype
+
 
   merge:variables:project:
-    cmds:
-      - task: merge:variables:project:project
-      - task: merge:variables:project:subtype
-
-  merge:variables:project:project:
     deps:
       - :install:software:jq
     cmds:
@@ -146,16 +146,16 @@ tasks:
           cp ./{{.COMMON_FOLDER}}/.config/docs/variables.json ./{{.COMMON_FOLDER}}/.config/variables.json
         fi
 
-  merge:variables:project:subtype:
+  merge:variables:subtype:
     deps:
       - :install:software:jq
     cmds:
       - |
-        GROUP="$(jq -r '.blueprint.subgroup' package.json)"
+        GROUP="$(jq -r '.blueprint.group' package.json)"
         if [ "$GROUP" == 'null' ]; then
-          GROUP="$(yq e '.vars.REPOSITORY_SUBTYPE' Taskfile.yml)"
+          GROUP="$(yq e '.vars.REPOSITORY_TYPE' Taskfile.yml)"
           if [ "$GROUP" == 'null' ]; then
-            echo "ERROR '.blueprint.subgroup' did not exist in the package.json and the fallback '.vars.REPOSITORY_SUBTYPE' did not exist in the Taskfile.yml"
+            echo "ERROR '.blueprint.group' did not exist in the package.json and the fallback '.vars.REPOSITORY_TYPE' did not exist in the Taskfile.yml"
           fi
         fi
         function handleSubtype() {
@@ -180,7 +180,10 @@ tasks:
       - :install:modules:local
       - :install:npm:hbs
     cmds:
-      - task: template:variables
+      - task: :upstream:variables
+        vars:
+          INPUT_FILE: ./{{.COMMON_FOLDER}}/.config/docs/variables.json
+          OUTPUT_FILE: ./.variables.json
       - task: template:files
 
   template:files:
@@ -192,42 +195,12 @@ tasks:
     vars:
       IGNORES: -o -path './project*' -o -path './deprecated*' -o
     cmds:
-      - |
-        function handlebars() {
-          FILE="$1"
-          {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "${FILE%.*}"
-          rm "$FILE"
-        }
-        find . -type f -not \( -path './{{.COMMON_FOLDER}}*' {{.IGNORES}} {{.IGNORE_FOLDERS}} \) -prune -name '*.handlebars' | while read FILE; do
-          handlebars "$FILE" &
-        done
-        wait
+      - task: :upstream:template:handlebars
+        vars:
+          ADDITIONAL_IGNORE_FOLDERS: -path './{{.COMMON_FOLDER}}*' -o -path './project*' -o -path './deprecated*' -o
 
   template:files:hbs:
-    vars:
-      IGNORES: -o -path './project*' -o -path './deprecated*' -o
     cmds:
-      - if [ -f "package.hbs.json" ]; then mv package.hbs.json tmp.package.hbs.json; fi
-      - |
-        function handlebars() {
-          FILE="$1"
-          {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "${FILE//.hbs}"
-          rm "$FILE"
-        }
-        find . -type f -not \( -path './{{.COMMON_FOLDER}}*' {{.IGNORES}} {{.IGNORE_FOLDERS}} \) -prune -name '*.hbs.*' | while read FILE; do
-          handlebars "$FILE" &
-        done
-        wait
-      - |
-        TMP="$(mktemp)"
-        BLUEPRINT="$(jq -r '.blueprint' package.json)"
-        jq --arg blueprint "$BLUEPRINT" -s '.[0] * .[1] | .blueprint = (.blueprint * ($blueprint | fromjson))' "package.json" tmp.package.json > "$TMP"
-        mv "$TMP" package.json
-      - rm tmp.package.json
-
-  template:variables:
-    cmds:
-      - task: :upstream:variables
+      - task: :upstream:template:hbs
         vars:
-          INPUT_FILE: ./{{.COMMON_FOLDER}}/.config/docs/variables.json
-          OUTPUT_FILE: ./.variables.json
+          ADDITIONAL_IGNORE_FOLDERS: -path './{{.COMMON_FOLDER}}*' -o -path './project*' -o -path './deprecated*' -o
