--- a/.gitlab/ci/test/ansible/role.gitlab-ci.yml
+++ b/.gitlab/ci/test/ansible/role.gitlab-ci.yml
@@ -19,11 +19,10 @@ molecule-linux:
       when: never
     - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
       changes:
-        - '{defaults,handlers,meta,molecule,tasks,templates,vars}/**/*.yml'
-        - templates/**/*.j2
+        - '{defaults,files,handlers,meta,molecule,tasks,templates,vars}/**'
         - ansible.cfg
-        - files/**/*
-        - requirements.txt
+        - poetry.lock
+        - pyproject.toml
         - requirements.yml
     - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == 'master'
   variables:
@@ -33,9 +32,9 @@ molecule-linux:
     DOCKER_TLS_VERIFY: 1
     GIT_DEPTH: 1
   script:
-    - set -eo pipefail
+    - task
     - SCENARIO="ci-docker-$OPERATING_SYSTEM"
-    - SNAP_REFERENCES=$(grep -Ril "community.general.snap:" ./tasks)
+    - SNAP_REFERENCES="$(grep -Ril 'community.general.snap:' ./tasks)"
     - if [ "$SNAP_REFERENCES" ]; then SCENARIO="ci-docker-$OPERATING_SYSTEM-snap"; fi
     - echo "***Molecule Scenario*** ---> $SCENARIO"
     - if [ -d "molecule/$SCENARIO" ]; then molecule test -s "$SCENARIO"; fi
