--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,9 +17,9 @@
       "command": "bash .config/scripts/vscode.sh && task ansible:populate:dependencies"
     },
     {
-      "label": "(test:local): Run the Ansible play on the local machine",
+      "label": "(ansible:test:local): Run the Ansible play on the local machine (or via WSL - see task summary)",
       "type": "shell",
-      "command": "bash .config/scripts/vscode.sh && task test:local"
+      "command": "bash .config/scripts/vscode.sh && task ansible:test:local"
     },
     {
       "label": "(test:docker): Performs a full test, including a test for idempotency, on all available Linux systems using Docker",
@@ -435,6 +435,36 @@
       "label": "(publish:opera:release): Publishes Opera extension",
       "type": "shell",
       "command": "bash .config/scripts/vscode.sh && task publish:opera:release"
+    },
+    {
+      "label": "(python:build): Build the project",
+      "type": "shell",
+      "command": "bash .config/scripts/vscode.sh && task python:build"
+    },
+    {
+      "label": "(python:build:binary): Build standalone binary",
+      "type": "shell",
+      "command": "bash .config/scripts/vscode.sh && task python:build:binary"
+    },
+    {
+      "label": "(python:publish): Publish the project to PyPi.org",
+      "type": "shell",
+      "command": "bash .config/scripts/vscode.sh && task python:publish"
+    },
+    {
+      "label": "(python:run): Runs the project by calling `run.py`",
+      "type": "shell",
+      "command": "bash .config/scripts/vscode.sh && task python:run"
+    },
+    {
+      "label": "(python:test): Runs tests with `pytest` after fixing and linting",
+      "type": "shell",
+      "command": "bash .config/scripts/vscode.sh && task python:test"
+    },
+    {
+      "label": "(security:bandit): Check for Python code security issues",
+      "type": "shell",
+      "command": "bash .config/scripts/vscode.sh && task security:bandit"
     },
     {
       "label": "(security:dockle): Analyze and lint the Docker container using Dockle",
