--- a/package.json
+++ b/package.json
@@ -28,24 +28,27 @@
   "dependencies": {
     "tslib": "^2.3.1"
   },
-  "devDependencies": {
-    "@commitlint/config-conventional": "^13.1.0",
-    "@mblabs/eslint-config": "^1.0.99",
-    "@mblabs/prettier-config": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "handlebars-helpers": "^0.10.0"
-  },
   "optionalDependencies": {
     "chalk": "^4.1.2",
     "inquirer": "^8.2.0",
     "signale": "^1.4.0"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^13.1.0",
+    "@mblabs/eslint-config": "^1.0.97",
+    "@mblabs/prettier-config": "^14.14.14",
+    "@mblabs/release-config": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "handlebars-helpers": "^0.10.0",
+    "semantic-release": "^18.0.0"
   },
   "keywords": [
     "common",
     "configurations",
     "files",
     "gitlab-ci",
+    "mblabs",
     "megabytelabs",
     "npm",
     "package",
@@ -85,5 +88,53 @@
       "url": "https://www.patreon.com/ProfessorManhattan"
     }
   ],
-  "prettier": "@mblabs/prettier-config"
+  "lint-staged": {
+    "**/*": [
+      "blocklint --wordlist blacklist,slave,whitelist",
+      "check-merge-conflict",
+      "check-added-large-files",
+      "check-symlinks",
+      "destroyed-symlinks"
+    ],
+    "**/*.(css|html|less|md|mjml|php|scss|sh|xml)": [
+      "task fix:prettier --"
+    ],
+    "**/*.(jpg|png)": [
+      "task image:compress --"
+    ],
+    "**/*.(js|jsx|ts|tsx)": [
+      "task fix:js --",
+      "task lint:js --"
+    ],
+    "**/*.json": [
+      "task fix:json --"
+    ],
+    "**/*.sh": [
+      "task fix:shell --",
+      "task lint:shell --"
+    ],
+    "**/*.toml": [
+      "task lint:toml --"
+    ],
+    "**/*.xml": [
+      "task fix:xml --",
+      "task lint:xml --"
+    ],
+    "**/*.yml": [
+      "task fix:yaml --",
+      "task lint:yaml --"
+    ],
+    "logo.png": [
+      "task image:resize -- 200 200",
+      "task image:compress --"
+    ]
+  },
+  "prettier": "@mblabs/prettier-config",
+  "release": {
+    "branches": [
+      "master",
+      "next"
+    ],
+    "extends": "@mblabs/release-config"
+  }
 }
