--- a/common/.config/taskfiles/Taskfile-ci.yml
+++ b/common/.config/taskfiles/Taskfile-ci.yml
@@ -6,21 +6,10 @@ tasks:
     deps:
       - :install:software:git
     cmds:
-      - git remote set-url origin "https://root:$GROUP_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git"
-      - git config user.email "$GITLAB_CI_EMAIL"
-      - git config user.name "$GITLAB_CI_NAME"
+      - task: commit:config
       - git checkout "$CI_COMMIT_REF_NAME"
       - git pull origin "$CI_COMMIT_REF_NAME"
       - task: before:npm
-    preconditions:
-      - sh: '[[ ! -z "$GROUP_ACCESS_TOKEN" ]]'
-        msg: The `GROUP_ACCESS_TOKEN` GitLab CI variable must be set to an API key with priviledges to read/write to repositories.
-      - sh: '[[ ! -z "$GITLAB_CI_EMAIL" ]]'
-        msg: 'The `GITLAB_CI_EMAIL` GitLab CI variable must be set to the e-mail address you would like associated with
-          automated commits (e.g. "help@mydomain.com").'
-      - sh: '[[ ! -z "$GITLAB_CI_NAME" ]]'
-        msg: 'The `GITLAB_CI_NAME` GitLab CI variable must be set to the name you would like associated with automated commits
-          (e.g. "CI Automation").'
 
   before:npm:
     deps:
@@ -32,6 +21,7 @@ tasks:
     deps:
       - :install:software:git
     cmds:
+      - task: commit:config
       - git add --all
       - git diff --cached "*"
       - |
@@ -39,6 +29,23 @@ tasks:
           git commit -m "automation(upstream-sync) Applying changes from upstream repository."
           git push origin "$CI_COMMIT_REF_NAME"
         fi
+
+  commit:config:
+    deps:
+      - :install:software:git
+    cmds:
+      - git remote set-url origin "https://root:$GROUP_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git"
+      - git config user.email "$GITLAB_CI_EMAIL"
+      - git config user.name "$GITLAB_CI_NAME"
+    preconditions:
+      - sh: '[[ ! -z "$GROUP_ACCESS_TOKEN" ]]'
+        msg: The `GROUP_ACCESS_TOKEN` GitLab CI variable must be set to an API key with priviledges to read/write to repositories.
+      - sh: '[[ ! -z "$GITLAB_CI_EMAIL" ]]'
+        msg: 'The `GITLAB_CI_EMAIL` GitLab CI variable must be set to the e-mail address you would like associated with
+          automated commits (e.g. "help@mydomain.com").'
+      - sh: '[[ ! -z "$GITLAB_CI_NAME" ]]'
+        msg: 'The `GITLAB_CI_NAME` GitLab CI variable must be set to the name you would like associated with automated commits
+          (e.g. "CI Automation").'
 
   submodules:
     deps:
