Update common/.gitlab/ci/lint/ansible-lint.gitlab-ci.yml, common/.gitlab/ci/lint/eslint.gitlab-ci.yml, common/.gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml, common/.gitlab/ci/lint/hadolint.gitlab-ci.yml, common/.gitlab/ci/lint/markdown-lint.gitlab-ci.yml, common/.gitlab/ci/lint/packer.gitlab-ci.yml, common/.gitlab/ci/lint/shellcheck.gitlab-ci.yml, common/.gitlab/ci/lint/standard.gitlab-ci.yml, common/.gitlab/ci/lint/stylelint.gitlab-ci.yml, common/.gitlab/ci/lint/vagrant.gitlab-ci.yml, common/.gitlab/ci/lint/yamllint.gitlab-ci.yml, common/.gitlab/ci/lint/python/bandit.gitlab-ci.yml, common/.gitlab/ci/lint/python/black.gitlab-ci.yml, common/.gitlab/ci/lint/python/flake8.gitlab-ci.yml, common/.gitlab/ci/lint/python/mypy.gitlab-ci.yml, common/.gitlab/ci/lint/python/pydocstyle.gitlab-ci.yml, common/.gitlab/ci/lint/python/pylint.gitlab-ci.yml, common/.gitlab/ci/fix/black.gitlab-ci.yml, common/.gitlab/ci/fix/eslint.gitlab-ci.yml, common/.gitlab/ci/fix/packer.gitlab-ci.yml, common/.gitlab/ci/fix/shellcheck.gitlab-ci.yml

--- a/common/.gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml
@@ -4,6 +4,9 @@ gitlab-ci-lint:
   image:
     name: megabytelabs/gitlab-ci-lint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*gitlab-ci.yml'
   variables:
     GIT_DEPTH: 1
   script:
