--- a/common/.gitlab/ci/fix/black.gitlab-ci.yml
+++ b/common/.gitlab/ci/fix/black.gitlab-ci.yml
@@ -4,6 +4,9 @@ black-fix:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.py'
   variables:
     GIT_DEPTH: 1
   script:
