--- a/common/.gitlab/ci/fix/shellcheck.gitlab-ci.yml
+++ b/common/.gitlab/ci/fix/shellcheck.gitlab-ci.yml
@@ -4,6 +4,9 @@ shellcheck-fix:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.{sh,sh.j2}'
   variables:
     GIT_DEPTH: 1
   script:
