--- a/common/.gitlab/ci/lint/hadolint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/hadolint.gitlab-ci.yml
@@ -4,6 +4,9 @@ hadolint:
   image:
     name: megabytelabs/hadolint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*Dockerfile*'
   variables:
     GIT_DEPTH: 1
   script:
