--- a/common/.gitlab/ci/lint/python/black.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/python/black.gitlab-ci.yml
@@ -4,6 +4,9 @@ black:
   image:
     name: megabytelabs/black:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.py'
   variables:
     GIT_DEPTH: 1
   script:
