--- a/common/.gitlab/ci/lint/python/flake8.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/python/flake8.gitlab-ci.yml
@@ -4,6 +4,9 @@ flake8:
   image:
     name: megabytelabs/flake8:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.py'
   variables:
     GIT_DEPTH: 1
   script:
