--- a/common/.gitlab/ci/lint/python/pydocstyle.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/python/pydocstyle.gitlab-ci.yml
@@ -4,6 +4,9 @@ pydocstyle:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.py'
   variables:
     GIT_DEPTH: 1
   script:
