--- a/common/.gitlab/ci/lint/stylelint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/stylelint.gitlab-ci.yml
@@ -4,6 +4,9 @@ stylelint:
   image:
     name: megabytelabs/stylelint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.{css,scss}'
   variables:
     GIT_DEPTH: 1
   script:
