--- a/common/.gitlab/ci/lint/vagrant.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/vagrant.gitlab-ci.yml
@@ -5,6 +5,9 @@ vagrant-validate:
     name: megabytelabs/vagrant:slim
     entrypoint: ['']
   allow_failure: true
+  when:
+    - exists:
+        - '**/Vagrantfile'
   variables:
     GIT_DEPTH: 1
   script:
