--- a/common/.gitlab/ci/lint/yamllint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/yamllint.gitlab-ci.yml
@@ -4,6 +4,9 @@ yamllint:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
+  when:
+    - exists:
+        - '**/*.{yaml,yml}'
   variables:
     GIT_DEPTH: 1
   script:
