Update common/.gitlab/ci/lint/ansible-lint.gitlab-ci.yml, common/.gitlab/ci/lint/eslint.gitlab-ci.yml, common/.gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml, common/.gitlab/ci/lint/hadolint.gitlab-ci.yml, common/.gitlab/ci/lint/markdown-lint.gitlab-ci.yml, common/.gitlab/ci/lint/packer.gitlab-ci.yml, common/.gitlab/ci/lint/shellcheck.gitlab-ci.yml, common/.gitlab/ci/lint/standard.gitlab-ci.yml, common/.gitlab/ci/lint/stylelint.gitlab-ci.yml, common/.gitlab/ci/lint/vagrant.gitlab-ci.yml, common/.gitlab/ci/lint/yamllint.gitlab-ci.yml, common/.gitlab/ci/fix/black.gitlab-ci.yml, common/.gitlab/ci/fix/eslint.gitlab-ci.yml, common/.gitlab/ci/fix/packer.gitlab-ci.yml, common/.gitlab/ci/fix/shellcheck.gitlab-ci.yml, common/.gitlab/ci/test/ansible/role.gitlab-ci.yml, common/.gitlab/ci/test/ansible/role.macos.gitlab-ci.yml, common/.gitlab/ci/test/ansible/role.windows.gitlab-ci.yml, common/.gitlab/ci/test/ansible/playbook.windows.gitlab-ci.yml, common/.gitlab/ci/test/ansible/playbook.macos.gitlab-ci.yml, common/.gitlab/ci/test/ansible/playbook.gitlab-ci.yml, common/.gitlab/ci/test/jest.gitlab-ci.yml, common/.gitlab/ci/test/docker/slim.gitlab-ci.yml, common/.gitlab/ci/test/jest-e2e.gitlab-ci.yml, common/.gitlab/ci/test/python.gitlab-ci.yml, common/.gitlab/ci/test/go.gitlab-ci.yml, common/.gitlab/ci/update/project.gitlab-ci.yml

--- a/common/.gitlab/ci/fix/eslint.gitlab-ci.yml
+++ b/common/.gitlab/ci/fix/eslint.gitlab-ci.yml
@@ -4,7 +4,7 @@ eslint-fix:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.{js,jsx,json,json.handlebars,toml,ts,tsx,yml}'
   variables:
