--- a/common/.gitlab/ci/fix/shellcheck.gitlab-ci.yml
+++ b/common/.gitlab/ci/fix/shellcheck.gitlab-ci.yml
@@ -4,7 +4,7 @@ shellcheck-fix:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.{sh,sh.j2}'
   variables:
