--- a/common/.gitlab/ci/lint/ansible-lint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/ansible-lint.gitlab-ci.yml
@@ -4,7 +4,7 @@ ansible-lint:
   image:
     name: megabytelabs/ansible-lint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - ansible.cfg
         - meta/main.yml
