--- a/common/.gitlab/ci/lint/hadolint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/hadolint.gitlab-ci.yml
@@ -4,7 +4,7 @@ hadolint:
   image:
     name: megabytelabs/hadolint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*Dockerfile*'
   variables:
