--- a/common/.gitlab/ci/lint/yamllint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/yamllint.gitlab-ci.yml
@@ -4,7 +4,7 @@ yamllint:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.{yaml,yml}'
   variables:
