--- a/common/.gitlab/ci/fix/black.gitlab-ci.yml
+++ b/common/.gitlab/ci/fix/black.gitlab-ci.yml
@@ -4,7 +4,7 @@ black-fix:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.py'
   variables:
