--- a/common/.gitlab/ci/fix/packer.gitlab-ci.yml
+++ b/common/.gitlab/ci/fix/packer.gitlab-ci.yml
@@ -8,9 +8,8 @@ packer-fix:
     - if: $CI_COMMIT_TITLE =~ /^automation\(.*/
       when: never
     - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
-      when:
-        - exists:
-            - '*template.json'
+      exists:
+        - '*template.json'
   variables:
     GIT_DEPTH: 1
     GIT_SUBMODULE_STRATEGY: recursive
