--- a/common/.gitlab/ci/lint/eslint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/eslint.gitlab-ci.yml
@@ -4,7 +4,7 @@ eslint:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.{js,jsx,json,json.handlebars,toml,ts,tsx,yml}'
   allow_failure: true
