--- a/common/.gitlab/ci/lint/stylelint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/stylelint.gitlab-ci.yml
@@ -4,7 +4,7 @@ stylelint:
   image:
     name: megabytelabs/stylelint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.{css,scss}'
   variables:
