--- a/common/.gitlab/ci/test/go.gitlab-ci.yml
+++ b/common/.gitlab/ci/test/go.gitlab-ci.yml
@@ -3,6 +3,9 @@ gotest:
   stage: test
   image: megabytelabs/gotest:slim
   needs: []
+  rules:
+    - exists:
+        - '**/*_test.go'
   variables:
     GIT_DEPTH: 1
   script:
