Update common/.gitlab/ci/update/renovate.gitlab-ci.yml, common/.gitlab/ci/lint/python/bandit.gitlab-ci.yml, common/.gitlab/ci/lint/python/black.gitlab-ci.yml, common/.gitlab/ci/lint/python/flake8.gitlab-ci.yml, common/.gitlab/ci/lint/python/mypy.gitlab-ci.yml, common/.gitlab/ci/lint/python/pydocstyle.gitlab-ci.yml, common/.gitlab/ci/lint/python/pylint.gitlab-ci.yml, common/.config/taskfiles/boilerplate/Taskfile.yml, common/.config/taskfiles/ci/Taskfile.yml, common/.config/taskfiles/docker/Taskfile.yml, common/.config/taskfiles/docker/Taskfile-update.yml, common/.config/taskfiles/docker/Taskfile-build.yml, common/.config/taskfiles/docker/Taskfile-test.yml, common/Taskfile.yml.handlebars, common/.config/taskfiles/fix/Taskfile.yml, common/.config/taskfiles/git/Taskfile.yml, common/.config/taskfiles/image/Taskfile.yml, common/.config/taskfiles/packer/Taskfile.yml, common/.config/taskfiles/packer/Taskfile-build.yml, common/.config/taskfiles/packer/Taskfile-update.yml, common/.config/taskfiles/python/Taskfile.yml, common/.config/taskfiles/python/Taskfile-test.yml, common/.config/taskfiles/security/Taskfile.yml, common/.config/taskfiles/symlink/Taskfile.yml, common/.config/taskfiles/vscode/Taskfile.yml Deleted common/.config/taskfiles/Taskfile-boilr.yml, common/.config/taskfiles/Taskfile-ci.yml, common/.config/taskfiles/Taskfile-docker.yml, common/.config/taskfiles/Taskfile-fix.yml, common/.config/taskfiles/Taskfile-git.yml, common/.config/taskfiles/Taskfile-image.yml, common/.config/taskfiles/Taskfile-packer.yml, common/.config/taskfiles/Taskfile-python.yml, common/.config/taskfiles/Taskfile-security.yml, common/.config/taskfiles/Taskfile-symlink.yml, common/.config/taskfiles/Taskfile-vscode.yml

--- a/common/.gitlab/ci/lint/python/flake8.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/python/flake8.gitlab-ci.yml
@@ -4,7 +4,7 @@ flake8:
   image:
     name: megabytelabs/flake8:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.py'
   variables:
