--- a/common/.gitlab/ci/lint/python/black.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/python/black.gitlab-ci.yml
@@ -4,7 +4,7 @@ black:
   image:
     name: megabytelabs/black:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.py'
   variables:
