--- a/common/.gitlab/ci/lint/python/pylint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/python/pylint.gitlab-ci.yml
@@ -4,7 +4,7 @@ pylint:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
-  when:
+  rules:
     - exists:
         - '**/*.py'
   variables:
