--- a/common/.gitlab/ci/update/renovate.gitlab-ci.yml
+++ b/common/.gitlab/ci/update/renovate.gitlab-ci.yml
@@ -9,8 +9,8 @@ renovate:
     - when: never
   variables:
     RENOVATE_GIT_AUTHOR: "${GITLAB_CI_NAME} <${GITLAB_CI_EMAIL}>"
-    RENOVATE_DRY_RUN: false
-    RENOVATE_LOG_LEVEL: info
+    RENOVATE_DRY_RUN: 'false'
+    RENOVATE_LOG_LEVEL: 'info'
   script:
     - >
       renovate
