--- a/.config/taskfiles/ansible/Taskfile.yml
+++ b/.config/taskfiles/ansible/Taskfile.yml
@@ -26,8 +26,9 @@ tasks:
       TMP:
         sh: mktemp
     cmds:
-      - jq --arg collections "$COLLECTIONS" '.{{.COLLECTION_DEPS}} = ($collections | fromjson)' '{{.VARIABLES_PATH}}' > "$TMP"
-      - mv "$TMP" '{{.VARIABLES_PATH}}'
+      - |
+        jq --arg collections "$COLLECTIONS" '.{{.COLLECTION_DEPS}} = ($collections | fromjson)' '{{.VARIABLES_PATH}}' > "$TMP"
+        mv "$TMP" '{{.VARIABLES_PATH}}'
     sources:
       - '{{.VARIABLES_PATH}}'
       - '{{.REQUIREMENTS_PATH}}'
@@ -208,9 +209,9 @@ tasks:
       - jq -e 'has("blueprint.ansible_galaxy_project_id")' package.json
 
   update:variables:
-    deps:
-      - :ansible:ansibler:ansibler
-      - update:variables:descriptions
+    cmds:
+      - task: :ansible:ansibler:ansibler
+      - task: update:variables:descriptions
 
   update:variables:descriptions:
     deps:
