--- a/.config/taskfiles/git/Taskfile.yml
+++ b/.config/taskfiles/git/Taskfile.yml
@@ -198,7 +198,7 @@ tasks:
     cmds:
       - |
         if [ ! -z "$GITLAB_TOKEN" ] && [ ! -z "$GITHUB_TOKEN" ]; then
-          glab api projects/:fullpath/integrations/github -X PUT -f token="$GITHUB_TOKEN" -f repository_url="$GITHUB_REPO"
+          glab api projects/:fullpath/integrations/github -X PUT -f token="$GITHUB_TOKEN" -f repository_url="$GITHUB_REPO" --silent
         fi
 
   gitlab:mirror:
@@ -300,7 +300,7 @@ tasks:
     vars:
       DESCRIPTION:
         sh: jq -r '.description' package.json
-      ISSUES_TEMPLATE: # # Summary\r\n\r\n(Summarize the bug encountered concisely)\r\n\r\n##
+      ISSUES_TEMPLATE: '## Summary\r\n\r\n(Summarize the bug encountered concisely)\r\n\r\n##
         Steps to reproduce\r\n\r\n(How one can reproduce the issue - this is very important)\r\n\r\n##
         Example Project\r\n\r\n(If possible, please create an example project here on GitLab.com that
         exhibits the problematic\r\nbehavior, and link to it here in the bug report.\r\nIf you are using
@@ -308,8 +308,8 @@ tasks:
         recent version)\r\n\r\n## What is the current bug behavior?\r\n\r\n(What actually happens)\r\n\r\n##
         What is the expected correct behavior?\r\n\r\n(What you should see instead)\r\n\r\n## Relevant
         logs and/or screenshots\r\n\r\n(Paste any relevant logs - please use code blocks (```) to format
-        console output, logs, and code, as\r\nit's very hard to read otherwise.)\r\n\r\n## Possible
-        fixes\r\n\r\n(If you can, link to the line of code that might be responsible for the problem)
+        console output, logs, and code, as\r\nit is very hard to read otherwise.)\r\n\r\n## Possible
+        fixes\r\n\r\n(If you can, link to the line of code that might be responsible for the problem)'
       NAME:
         sh: jq -r '.blueprint.name' package.json
       PROJECT_TYPE:
@@ -322,11 +322,11 @@ tasks:
     cmds:
       - |
         if [ ! -z "$GITLAB_TOKEN" ]; then
+          PROJECT_ID="$(glab api projects/:fullpath -X PUT -f build_coverage_regex="{{.TEST_COVERAGE_REGEX}}" \
+          -f wiki_enabled={{.GITLAB_WIKI}} -f visibility="{{.PROJECT_TYPE}}" -f topics="$KEYWORDS" | jq '.id')"
           curl -s -H 'Content-Type: application/json' -H "Authorization: Bearer $GITLAB_TOKEN" -X PUT --data \
           '{"description": "{{.DESCRIPTION}}", "issues_template": "{{.ISSUES_TEMPLATE}}", "name": "{{.NAME}}"}' \
-          https://gitlab.com/api/v4/projects/31472271
-          glab api projects/:fullpath -X PUT -f build_coverage_regex="{{.TEST_COVERAGE_REGEX}}" -f wiki_enabled={{.GITLAB_WIKI}} \
-          -f visibility="{{.PROJECT_TYPE}}" -f topics="$KEYWORDS" --silent
+          "https://gitlab.com/api/v4/projects/$PROJECT_ID" > /dev/null
         else
           true warn 'The `GITLAB_TOKEN` environment variable is not set so the GitLab repository cannot be updated via the API.'
         fi
