--- a/.config/taskfiles/vscode/Taskfile.yml
+++ b/.config/taskfiles/vscode/Taskfile.yml
@@ -3,7 +3,7 @@ version: '3'
 
 vars:
   EXTENSIONS_FILE: .vscode/extensions.json
-  EXTENSIONS_URL: https://gitlab.com/ProfessorManhattan/Playbooks/-/raw/master/environments/prod/group_vars/desktop/vscode-extensions.yml
+  EXTENSIONS_URL: https://gitlab.com/megabyte-labs/gas-station/-/raw/master/environments/prod/group_vars/desktop/vscode-extensions.yml
   TASKS_FILE: .vscode/tasks.json
 
 tasks:
@@ -12,10 +12,24 @@ tasks:
       - :install:npm:prettier
       - :install:software:jq
       - :install:software:yq
+    summary: |
+      # Generates the `.vscode/extensions.json` file for VS Code auto plugin recommendations
+
+      This task generates the `.vscode/extensions.json` file which is used to automatically have
+      VS Code show a popup with a link that leads to a list of plugins that the project recommends.
+      This list is populated by converting the list of VS Code plugins installed by default by
+      [Gas Station](https://gitlab.com/megabyte-labs/gas-station) into VS Code syntax.
     cmds:
-      - >
-        curl -s "{{.EXTENSIONS_URL}}" | yq e '.vscode_extensions[].name' - | jq -cRrs 'split("\n") | "{ \"recommendations\": \(.) }"'
-        | jq '.recommendations = ([ .recommendations[] | select(length > 0) ])' > {{.EXTENSIONS_FILE}}
+      - mkdir -p .vscode
+      - |
+        TMP="$(mktemp)"
+        curl -s {{.EXTENSIONS_URL}} > "$TMP"
+        TMP_YQ="$(mktemp)"
+        cat "$TMP" | yq e '.vscode_extensions[].name' - > "$TMP_YQ"
+        TMP_JQ="$(mktemp)"
+        cat "$TMP_YQ" | jq -cRrs 'split("\n") | "{ \"recommendations\": \(.) }"' > "$TMP_JQ"
+        cat "$TMP_JQ" | sed 's/,""//' > '{{.EXTENSIONS_FILE}}'
+      - prettier --write '{{.EXTENSIONS_FILE}}'
 
   generate:
     deps:
@@ -26,6 +40,15 @@ tasks:
     deps:
       - :install:npm:prettier
       - :install:software:jq
+    summary: |
+      # Populate the `.vscode/tasks.json` file
+
+      This task populates the `.vscode/tasks.json` file with tasks that are viewable by
+      running `task --list`. With the file generated using the output from `tasks --list`,
+      the user can then easily run any of the tasks from within VS Code.
+
+      This is a simple implementation. There are many features provided by VS Code that we
+      can potentially leverage to make our `tasks.json` better and more useful to developers.
     env:
       TASK_LIST:
         sh: task --list
@@ -48,6 +71,4 @@ tasks:
           fi
         done <<< "$TASK_LIST"
         jq --arg tasks "${TASKS%?}]" '.tasks = ($tasks | fromjson)' "$TMP" > '{{.TASKS_FILE}}'
-      - task: :fix:prettier
-        vars:
-          CLI_ARGS: '{{.TASKS_FILE}}'
+      - prettier --write '{{.TASKS_FILE}}'
