--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,6 +18,7 @@ includes:
   docker:update: ./.config/taskfiles/docker/Taskfile-update.yml
   fix: ./.config/taskfiles/fix/Taskfile.yml
   git: ./.config/taskfiles/git/Taskfile.yml
+  git:gitlab: ./.config/taskfiles/git/Taskfile-gitlab.yml
   go: ./.config/taskfiles/go/Taskfile.yml
   go:test: ./.config/taskfiles/go/Taskfile-test.yml
   image: ./.config/taskfiles/image/Taskfile.yml
@@ -61,7 +62,6 @@ output: interleaved
 
 vars:
   DOCKERHUB_PROFILE: megabytelabs
-
   GITHUB_ORG: ProfessorManhattan
   GITHUB_USER: ProfessorManhattan
   IGNORE_FOLDERS: -path './.autodoc/*' -o -path './.cache/*' -o -path './.common*' -o -path './.config/*' -o -path './.git/*'
@@ -78,6 +78,10 @@ vars:
 
 tasks:
   donothing: 'true'
+
+  group:exec:
+    cmds:
+      - task: git:gitlab:group:exec
 
   start:
     desc: Set up the project and refresh it with the latest changes
