--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -85,6 +85,7 @@ tasks:
       - task: git:gitlab:group:exec
 
   init:
+    interactive: true
     desc: Initialize a project for the first time (use when creating a new project)
     cmds:
       - |
