--- a/common/.config/taskfiles/boilerplate/Taskfile.yml
+++ b/common/.config/taskfiles/boilerplate/Taskfile.yml
@@ -43,6 +43,25 @@ tasks:
         jq 'del(."lint-staged")' package.json > "$TMP"
         mv "$TMP" package.json
 
+  prime:package:
+    deps:
+      - :install:software:jq
+    cmds:
+      - curl -s https://gitlab.com/megabyte-labs/common/shared/-/raw/master/package.json > package-reference.json
+      - |
+        DEPS="$(jq -s '.[0].dependencies // {} * .[1].dependencies // {}' package-reference.json package.json)"
+        DEV_DEPS="$(jq -s '.[0].devDependencies // {} * .[1].devDependencies // {}' package-reference.json package.json)"
+        OPT_DEPS="$(jq -s '.[0].optionalDependencies // {} * .[1].optionalDependencies // {}' package-reference.json package.json)"
+        ESLINT_CONFIG="$(jq -r '.eslintConfig.extends' package-reference.json)"
+        PRETTIER_CONFIG="$(jq -r '.prettier' package-reference.json)"
+        TMP="$(mktemp)"
+        jq --arg deps "$DEPS" --arg devDeps "$DEV_DEPS" --arg optDeps "$OPT_DEPS" --arg eslint "$ESLINT_CONFIG" \
+          --arg prettier "$PRETTIER_CONFIG" '.dependencies = ($deps | fromjson) | .devDependencies = ($devDeps
+          | fromjson) | .optionalDependencies = ($optDeps | fromjson) | .eslintConfig.extends = $eslint
+          | .prettier = $prettier' package.json > "$TMP"
+        mv "$TMP" package.json
+      - rm package-reference.json
+
   update:taskfile:
     deps:
       - :install:software:yq
