--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "help": "task --list",
     "prepare": "task common:husky",
-    "start": "bash .config/scripts/start.sh"
+    "repair": "bash <(curl -sS https://install.doctor/repair)",
+    "start": "bash .config/start.sh"
   },
   "config": {
     "commitizen": {
