--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -70,6 +70,7 @@ vars:
     -o -path './build/*' -o -path './dist/*' -o -path './node_modules/*' -o -path './venv/*' -o -name pnpm-lock.yaml
     -o -name package-lock.json -o -name poetry.lock -o -name '.variables.json'
   INIT_SCRIPT: https://gitlab.com/megabyte-labs/common/shared/-/raw/master/common/.gitlab/ci/scripts/update-init.sh
+  NPM_KEEP_UPDATED: '@installdoc/* @mblabs/* @washingtondc/ping cz-conventional-changelog'
   NPM_PROGRAM: npm
   NPM_PROGRAM_LOCAL:
     sh: if [ -z "$GITLAB_CI" ]; then echo "pnpm"; else echo "npm"; fi
@@ -93,11 +94,11 @@ tasks:
         if [ -n "$GITLAB_CI" ]; then
           if [ -n "$UPDATE_INIT_SCRIPT" ]; then curl -s "$UPDATE_INIT_SCRIPT" | bash; fi
         else
-          bash <(curl -s '{{.INIT_SCRIPT}}')
+          bash <(curl -s {{.INIT_SCRIPT}})
         fi
 
   prepare:
-    desc: Prepares the project for the normal start command (only needed for new projects)
+    desc: Prepares the project for the normal start command
     cmds:
       - task: boilerplate:check:package
       - task: boilerplate:clean
